New in version 1.8.0


05/07/2022 Version 1.7.1 is now frozen
New in version 1.7.1

This version is identical to 1.7.0 but it is compatible with QE7.1.

05/07/2022 Version 1.7.0 is now frozen
New in version 1.7.0

This version is compatible with QE 7.0.

Added a plot of entropy, energy and free energy as a function of 
temperature for several pressures.

Added the possibility to compute the electronic free energy
from the total energy as a function of smearing (still experimental).

10/01/2022 Version 1.6.1 is now frozen
New in version 1.6.1

This version is identical to 1.6.0 but it is compatible with QE7.0.

27/12/2021 Version 1.6.0 is now frozen
New in version 1.6.0

This version is compatible with QE6.8.

Added a plot of the enthalpy as a function of pressure. 
Added a plot of the crystal parameters as a function of pressure.
Added a plot of the Murnaghan fit and of the pressure as a function 
of volume at several temperatures.

Added plots of the anharmonic quantities as a function of temperature
for several pressures.

Added plots of the bulk modulus, thermal expansion, isobaric and isochoric
heat capacities and average Gruneisen parameter as a function of pressure
for several temperatures (in collaboration with X. Gong)

Added the possibility to use also the Birch-Murnaghan of third or fourth 
order to fit the energy as a function of volume 
(in collaboration with X. Gong)

ev_sub updated to the changes of the QE routine.

New in version 1.5.1
22/07/2021 Version 1.5.1 is now frozen

This version is identical to 1.5 but it is compatible with QE.6.8.
In particular it can be compiled with the GPU version of the QE.

New in version 1.5
19/07/2021 Version 1.5 is now frozen

This version is identical to 1.4.1 and is compatible with QE.6.7.
Some bugs have been corrected and an experimental plot of the
Brillouin zone with the FreeCAD software has been added.

29/12/2020 Version 1.4.1 is now frozen
New in Version 1.4.1
