@@ -2162,6 +2162,9 @@ nsigma        : The number of smearing values for which there are
 sigma_ry      : the value of the smearing for each directory restart.
                 In Ry units.
                 Default: Must be set of each nsigma by the user.
+lhugoniot     : If .TRUE. the code plots T(p) and V(p) along the 
+                Hugoniot curve.
+                Default: .FALSE.
 flgrun        : file where the Gruneisen parameters are written. 
                 Default: character(len=*) 'output_pgrun.dat'
 flpgrun       : file where the Gruneisen parameters in a plotable 
